gke/deployment/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gochat-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gochat-api
  template:
    metadata:
      labels:
        app: gochat-api
    spec:
      containers:
        - name: gochat-api
          image: eddygarr/gochat-api:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 150
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: gochat-api-service
spec:
  selector:
    app: gochat-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
