gke/deployment/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gochat-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gochat-frontend
  template:
    metadata:
      labels:
        app: gochat-frontend
    spec:
      containers:
        - name: gochat-frontend
          image: eddygarr/gochat-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gochat-frontend-service
spec:
  selector:
    app: gochat-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
